# campfire-mcp-demo

./: Dockerfile  Makefile  README.md  app.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
config/: promtail-config.yml  tempo.yaml
config/grafana/provisioning/datasources/: datasources.yml  prometheus.yml
scripts/: generate_load.py
tests/: test_app_integration.py  test_generate_load.py
