[project]
name = "campfire-mcp-demo"
version = "0.1.0"
description = "Load Generation Script for Grafana MCP Server Demo"
requires-python = ">=3.11"
dependencies = [
    "prometheus_client==0.23.1",
    "flask==3.0.0",
    "requests==2.32.5",
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-instrumentation-flask==0.42b0",
    "opentelemetry-instrumentation-requests==0.42b0",
    "opentelemetry-exporter-otlp==1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311'] 